# LogAnalyser

./: CMakeLists.txt  README.md
OLD/: README.md
OLD/include/: analyzer.h
OLD/project-v1/include/: analyzer.h  parser.h  pcap_collector.h  rules.h  security.h
OLD/project-v1/signatures/: signatures.txt
OLD/project-v1/src/: main.c
OLD/project-v1/src/analyzers/: analyzer.c
OLD/project-v1/src/collectors/: file_collector.c
OLD/project-v1/src/reporters/: reporter.c
OLD/project-v1/tests/: test_analyzer.c  test_parser.c
OLD/project-v2/include/: log_analyzer.h
OLD/project-v2/src/: ddos_detector.c
OLD/src/: main.c
OLD/src/collectors/: file_collector.c
OLD/src/core/: config.c
include/: collector.h  config.h  ddos_detector.h  demo.h  help.h  log_analyzer.h  packet_capture.h  parser.h
project-v1/: CMakeLists.txt
project-v1/include/: collector.h  config.h  help.h  reporter.h
project-v1/rules/: ttp_rules.txt
project-v1/src/: help.c
project-v1/src/analyzers/: rules.c
project-v1/src/collectors/: pcap_collector.c
project-v1/src/core/: config.c
project-v1/src/parsers/: log_parser.c
project-v1/src/security/: security.c
project-v1/tests/: CMakeLists.txt  test_main.c
project-v2/: CMakeLists.txt  README.md
project-v2/include/: ddos_detector.h  demo.h  packet_capture.h
project-v2/src/: demo.c  log_analyzer.c  main.c  packet_capture.c
src/: ddos_detector.c  demo.c  help.c  log_analyzer.c  main.c  packet_capture.c
src/analyzers/: analyzer.c
src/parsers/: log_parser.c
tests/: CMakeLists.txt  test_log_analyzer.c
web/: globals.css  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: Demo.tsx  Features.tsx  Footer.tsx  Hero.tsx  ProblemStatement.tsx  Team.tsx  navbar.tsx
