cmake_minimum_required(VERSION 3.10)
project(LogAnalyser C)
set(CMAKE_C_STANDARD 11)
include_directories(include)
find_package(Pcap REQUIRED)
add_executable(LogAnalyser src/main.c src/help.c)
target_link_libraries(LogAnalyser Pcap::Pcap)
set_target_properties(LogAnalyser PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
